Add JavaDoc for every public class/method